<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="data_provider_name">Data</string>
    <string name="app_name">SmartChat</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="done">Done</string>
    <string name="invite">Invite</string>
    <string name="pick_from_contacts">Pick From Your Contacts</string>
    <string name="message_hint">Add a custom invite message</string>
    <string name="send_invite">Send Invite</string>
    <string name="upload">Upload</string>
    <string name="capture">Capture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="friends">Friends</string>
    <string name="friends_list_empty">You are not connected to any friends. Please add some by swiping right.</string>
    <string name="add_contacts_empty">None of your contacts were found on SmartChat, please invite some!</string>
    <string name="find_friends">Click to find friends</string>
    <string name="username_blank">Username cannot be blank</string>
    <string name="email_blank">Email cannot be blank</string>
    <string name="email_invalid">Email is not valid</string>
    <string name="password_blank">Password cannot be blank</string>
    <string name="phone_number_blank">Phone number cannot be blank</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_list_empty">You don\'t have any SmartChats. You should send some instead.</string>
    <string name="draw">Draw</string>
    <string name="toggle_swatch">Toggle Swatch</string>
    <string name="undo">Undo</string>
    <string name="expire_in">Expire In</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="groupies">Groupies</string>
    <string name="contacts_on_smartchat">Contacts on SmartChat</string>
    <string name="skip">Skip</string>
    <string name="verify_my_number">Verify my number via SMS</string>
    <string name="verify_explanation">Would you like to add your phone number so others can find you? This will send us a text message.</string>

</resources>
