<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.smartlogic.smartchat.activities.LoginActivity$PlaceholderFragment">

    <Button
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/skip" />

    <TextView
        android:layout_above="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_explanation"
        android:gravity="center"
        android:textSize="@dimen/sms_explanation_text_size" />

    <View
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/verify_my_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center"
        android:text="@string/verify_my_number" />
</RelativeLayout>
