<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/pick_from_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_from_contacts" />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pick_from_contacts" />

    <TextView
        android:id="@+id/message_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:text="@string/message_hint"
        android:textSize="@dimen/contact_text_size" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_hint"
        android:minLines="3" />

    <Button
        android:id="@+id/send"
        android:layout_below="@+id/message"
        android:text="@string/send_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
